fix: failing to write a report should fail the Maven build